commit 24: configure websockets and chat functional
